--- a/Csharp-masterkurs.csproj
+++ b/Csharp-masterkurs.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Csharp_masterkurs</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <NoWarn>$(NoWarn);SYSLIB0011</NoWarn>
   </PropertyGroup>
 
 </Project>
